--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -6,3 +6,11 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+.Cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width:100%;
+  border: purple solid 1px
+
+}
